v8/tests/messages/unknown-break-label.out
unknown-break-label.js:2: Uncaught SyntaxError: Undefined label 'knirk'
  break knirk;
        ^
